# ginga-2010-2015-gui

./: .gitignore  CMakeLists.txt  Makefile  README.md  Resources.qrc  comborichmenuitem.cpp  comborichmenuitem.h  defaultrichmenuitem.cpp  defaultrichmenuitem.h  gingagui-minipc-cpp.pro  gingagui.pro  gingapage.cpp  gingapage.h  gingaproxy.cpp  gingaproxy.h  infobar.cpp  infobar.h  ippage.cpp  main.cpp  mainwindow.cpp  mainwindow.h  menuitem.cpp  menuitem.h  page.cpp  page.h  pagexmlparser.cpp  pagexmlparser.h  useraccountpage.cpp  useraccountpage.h  userpreferences.cpp  userpreferences.h  util.h
application/: application.pro  application.qrc  application.rc  gingagui.vcxproj
application/forms/: QnplAboutForm.ui  QnplGeneralForm.ui  QnplPreferencesForm.ui  QnplRunForm.ui  qnplaboutform.ui  qnplchannelsform.ui  qnplenvironmentform.ui  qnpliptvtunerform.ui  qnplpreferencesform.ui  qnplrunform.ui
application/images/backgrounds/: bg-gingagui.psd
application/src/: main.cpp
application/src/ui/: qnplaboutdialog.cpp  qnplaboutdialog.h  qnplaplication.cpp  qnplchannelsdialog.cpp  qnplchannelsdialog.h  qnpliptvtunerdialog.cpp  qnpliptvtunerdialog.h  qnplmainwindow.cpp  qnplmainwindow.h  qnplnextchanneldialog.h  qnplpreferencesdialog.cpp  qnplpreferencesdialog.h  qnplscene.cpp  qnplscene.h  qnplsettings.cpp  qnplsettings.h  qnplview.cpp  (+1 more)
application/translations/: en.ts  es.qm  es.ts  pt_br.ts
contrib/: Makefile  gingagui-minipc-walk  mount_usb  rc6_mce  trydhcp  umount_usb
desktop-gui/: CMakeLists.txt  application.qrc  application.rc  gingagui.vcxproj
desktop-gui/debian/: changelog  files  rules
desktop-gui/forms/: aboutform.ui  channelsform.ui  iptvtunerform.ui  preferencesform.ui  runform.ui
desktop-gui/include/: debugview.h  developerview.h  gingaview.h  mainwindow.h  util.h  util_.h
desktop-gui/src/: aboutdialog.cpp  catalog.cpp  debugobjectitem.cpp  debugview.cpp  developerview.cpp  gingaproxy.cpp  gingaview.cpp  main.cpp  mainwindow.cpp  pbds.cpp  util.cpp
desktop-gui/translations/: es.ts
desktopGUI/: about.txt  application.qrc  gingagui-desktop.pro
desktopGUI/config/: config.ini  contexts.ini
desktopGUI/debian/: changelog  control  files
desktopGUI/forms/: dialoggt.ui  environmentform.ui  qnplaboutform.ui  qnplaplicationform.ui  qnplenvironmentform.ui  qnpliptvtunerform.ui  qnplpreferencesform.ui  qnplrunform.ui  runform.ui
desktopGUI/include/: aboutdialog.h  catalog.h  channelsdialog.h  debugobjectitem.h  debugview.h  developerview.h  gingaproxy.h  gingaview.h  iptvtunerdialog.h  mainwindow.h  pbds.h  preferencesdialog.h  qnplaboutdialog.h  qnplaplicationdialog.h  qnplchannelsdialog.h  qnpliptvtunerdialog.h  qnplmainwindow.h  qnplpreferencesdialog.h  qnplsettings.h  qnplutil.h  qnplview.h  util.h
desktopGUI/src/: aboutdialog.cpp  catalog.cpp  channelsdialog.cpp  debugobjectitem.cpp  debugview.cpp  developerview.cpp  gingaproxy.cpp  gingaview.cpp  iptvtunerdialog.cpp  main.cpp  mainwindow.cpp  pbds.cpp  preferencesdialog.cpp  qnplaboutdialog.cpp  qnplchannelsdialog.cpp  qnpliptvtunerdialog.cpp  qnplmainwindow.cpp  qnplnextchanneldialog.cpp  qnplpreferencesdialog.cpp  qnplscene.cpp  qnplsettings.cpp  qnplutil.cpp  qnplview.cpp  util.cpp
desktopGUI/translations/: en.ts  es.qm  es.ts  pt_br.qm  pt_br.ts
desktopGUI/xml/: main.xml
files/: contextsAllowedValues.ini  settings.ini
files/xml/: .main.xml.swp  appsoptions.xml  cdcontent.xml  ethermgmt.xml  localapps.xml  main.xml  netmgmt.xml  newether.xml  newuser.xml  nocontentserver.xml  primeirojoaogroup.xml  primeirojoaomd.xml  settings.xml  usermgmt.xml
fullscreen-gui/: CMakeLists.txt  gingagui-fullscreen.pro
fullscreen-gui/contrib/: 10-local.rules  getip  gingagui-minipc-cpp.SlackBuild  mount_usb  umount_usb
fullscreen-gui/files/xml/: appsoptions.xml  localapps.xml  main.xml  netmgmt.xml  udpcontent.xml  usermgmt.xml
fullscreen-gui/include/: mainwindow.h  userpreferences.h
fullscreen-gui/src/: gingaproxy.cpp  ippage.cpp  main.cpp  mainwindow.cpp  menuitem.cpp  page.cpp  pagexmlparser.cpp  useraccountpage.cpp  userpreferences.cpp
fullscreenGUI/: gingagui-fullscreen.pro  gingagui.pro
fullscreenGUI/contrib/: trydhcp
fullscreenGUI/files/: contextsAllowedValues.ini
fullscreenGUI/include/: gingaproxy.h  ippage.h  mainwindow.h  page.h  pagexmlparser.h  richmenuitem.h  util.h
fullscreenGUI/src/: comborichmenuitem.cpp  defaultrichmenuitem.cpp  gingaproxy.cpp  main.cpp  mainwindow.cpp  menuitem.cpp  page.cpp  useraccountpage.cpp  userpreferences.cpp
run-view/: CMakeLists.txt  plugins-common.pri  resources.qrc  run-view.json.in  run-view.pro  run_view.json
run-view/include/: configdialog.h  runviewfactory.h  runviewplugin.h
run-view/src/: configdialog.cpp  runviewfactory.cpp  runviewplugin.cpp
scripts/: ZOTAC_mapping.ahk
src/ui/: .qnplmainwindow.cpp.swp
tests/: tests.pro
(+10 files in other folders)
